# B5

./: .gitignore  HELP.md  pyproject.toml
.cursor/: mcp.json
W2/data_analytics/: 02_pandas.ipynb
W2/lecture_v2/: L02_pandas.ipynb
W2/scenario/: 01_wpm.ipynb
W5_NLP/: TF_TFIDF_From_Scratch.ipynb
W5_NLP/M1/sessions/: 03_prep.ipynb  05_classifier_ex1.ipynb  06_classifier_ex2.ipynb  07_information_retrieval_ex.ipynb  08_topic_modeling_ex.ipynb  TF_TFIDF_From_Scratch.ipynb
W5_NLP/M3/labs/: 01_Text_Classification.ipynb
W6/: README.md  pyproject.toml
s_to_nb/: D3_HandsOn.ipynb  D3_Session1_Modules.ipynb  D3_Session2_OOP.ipynb  D3_Session3_Typer.ipynb  PROMPT.md  tests.py
s_to_nb/.ipynb_checkpoints/: D3_HandsOn-checkpoint.ipynb  D3_Session1_Modules-checkpoint.ipynb  D3_Session2_OOP-checkpoint.ipynb  D3_Session3_Typer-checkpoint.ipynb
temp/: W2_Reference.md
temp/week2-data-work/: README.md  pyproject.toml
temp/week2-data-work/src/bootcamp_data/: transforms.py
temp/week2-data-work/tests/: test_transforms.py
