[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "week2-data-work"
version = "0.1.0"
description = "A project for week 2 data work."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.36.1",
    "pyarrow>=22.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
